--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "nouislider": "^15.8.1",
+    "simplebar": "^6.3.0",
     "swiper": "^11.1.15",
-    "video.js": "^8.21.0"
+    "video.js": "^8.21.0",
+    "wnumb": "^1.2.0"
   }
 }
