--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "inputmask": "^5.0.9",
     "nouislider": "^15.8.1",
     "simplebar": "^6.3.0",
     "swiper": "^11.1.15",
